worked on about me, need to fix social btns, and alignment

--- a/css/home.css
+++ b/css/home.css
@@ -35,18 +35,86 @@ body{
     
 }
 
-
-
 .box{
     margin-top:50px;
 }
 
 
 .jumbotron{
-    margin-top:50px;
+    margin-top: 50px;
+    height: 300px;
     background-color:#000;
     opacity: 0.9;
     color: #a4189a;
+}
+
+.socials{
+    height: 40px;
+}
+
+.bio{
+    font-size: 22px;
+    text-indent:30px;
+    text-align: justify;
+    line-height: 30px;
+}
+
+.column{
+    margin-top: 30px;
+    line-height: 40px;
+    list-style-type: none;
+    boder: thin solid #000;
+}
+
+.flip{
+    background: rgba(164, 24, 154, 0.8);
+    height: 500px;
+    border-radius: 6px;
+}
+
+.flip_inner{
+    position:relative;
+    height:100%;
+    text-align:center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    border-radius: 6px;
+}
+
+.flip_front, .flip_back{
+    position: absolute;
+    /* width: 100%; */
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 6px;
+}
+
+.flip_front{
+    /* background-color:#a4189a; */
+    color: #000;
+    border-radius: 6px;
+}
+
+.flip_back{
+    width:100%;
+    background-color:#04b1fb;
+    color: #000;
+    transform: rotateY(180deg);
+    border-radius: 6px;
+}
+
+.flip:hover .flip_inner {
+    transform: rotateX(180deg);
+    border-radius: 6px;
+  }
+  
+.flip_back {
+    transform: rotateX(180deg);
+    border-radius: 6px;
+  }
+
+  .meme{
+    height:400px;
 }
 
 .thumbnail{
@@ -58,47 +126,4 @@ body{
 .thumb{
     height:200px;
     width:200px;
-}
-
-.flip{
-    background: rgba(164, 24, 154, 0.8);
-    height: 500px;
-}
-
-.flip_inner{
-    position:relative;
-    height:100%;
-    text-align:center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-}
-
-.flip_front, .flip_back{
-    position: absolute;
-    /* width: 100%; */
-    height: 100%;
-    backface-visibility: hidden;
-}
-
-.flip_front{
-    /* background-color:#a4189a; */
-    color: #000;
-}
-
-.flip_back{
-    background-color:#04b1fb;
-    color: #000;
-    transform: rotateY(180deg);
-}
-
-.flip:hover .flip_inner {
-    transform: rotateX(180deg);
-  }
-  
-.flip_back {
-    transform: rotateX(180deg);
-  }
-
-  .meme{
-    height:200px;
 }
